[ADM-3335] Fix button color on Safarishit

--- a/src/app/tutorial/tutorial.component.scss
+++ b/src/app/tutorial/tutorial.component.scss
@@ -50,6 +50,7 @@
     color: $corporate;
     padding: 10px 48px;
     border-radius: 100px;
+    background: $white;
     &:hover {
       color: $corporate-dark;
     }
